[gd_scene load_steps=7 format=3 uid="uid://d0ir4paeibh6c"]

[ext_resource type="Theme" uid="uid://cfvabtb858o0t" path="res://main_theme.tres" id="1_p0onm"]
[ext_resource type="Script" uid="uid://fpdv6ih3g5nl" path="res://MenuItems/build__building_button.gd" id="1_sq0aw"]
[ext_resource type="Texture2D" uid="uid://d3bcve1dovoxs" path="res://assets/building-128_box.png" id="2_p0onm"]
[ext_resource type="Texture2D" uid="uid://bfcefsrbe41gw" path="res://3rd Party/assets/gui/panelInset_beigeLight.png" id="3_65ejm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kdbqh"]
texture = ExtResource("3_65ejm")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_65ejm"]

[node name="BuildBuildingButton" type="Button"]
custom_minimum_size = Vector2(140, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -110.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
script = ExtResource("1_sq0aw")
buildingtype = 5

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.5
offset_top = -124.203
offset_right = 67.5
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme = ExtResource("1_p0onm")
theme_override_styles/panel = SubResource("StyleBoxTexture_kdbqh")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_p0onm")
expand_mode = 5
stretch_mode = 5

[node name="BuildBuildingDetails" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="BuildingTypeNameLabel" type="Label" parent="PanelContainer/BuildBuildingDetails"]
unique_name_in_owner = true
layout_mode = 2
text = "(Building Type)"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/BuildBuildingDetails"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_65ejm")

[node name="BuildingRequirementsContainer" type="VBoxContainer" parent="PanelContainer/BuildBuildingDetails/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RequirementsLabel" type="Label" parent="PanelContainer/BuildBuildingDetails/PanelContainer/BuildingRequirementsContainer"]
layout_mode = 2
text = "Requirements"

[connection signal="pressed" from="." to="." method="_on_pressed"]
